data/all_generated_tests/raw_wast_tests/br_table_StackCorruption_2071.wast
;; 1. **Test: Out-of-Bounds Operand Index**    - **Description:** Provide a `br_table` instruction with an operand value out of bounds of the label vector.    - **Constraint:** Ensures the default label is correctly targeted.    - **Relation to Stack Corruption:** This checks if out-of-bounds handling properly unwinds the stack and targets the default label without stack corruption.

(assert_invalid
  (module
    (func (block $default
      (block $label1 (br_table $label1 $default (i32.const 2)))
    ) )
  )
  "type mismatch"
)